Embedded google maps

--- a/app/views/roar_spots/show.html.erb
+++ b/app/views/roar_spots/show.html.erb
@@ -27,7 +27,7 @@
   width="230"
   height="230"
   frameborder="0" style="border:0"
-  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCIp72jYa0FwZxNZQJGmRubpDs6bw2xCm4
+  src="https://www.google.com/maps/embed/v1/place?key=YourKey
     &q=S<%= @roar_spot.address.parameterize %>&zoom=14">
 </iframe>
 
